--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -3,18 +3,31 @@ services:
   app:
     build: .
     ports:
-      - 3000:3000
+      - 3001:3001
     environment:
-      - POSTGRES_USER=surveyuser
-      - POSTGRES_PASSWORD=surveypassword
+      - POSTGRES_USER=knowankit
+      - POSTGRES_PASSWORD=surveybuilder
       - POSTGRES_DB=surveybuilder
     volumes:
       - .:/app
     depends_on:
       - db
   db:
-    image: postgres
+    image: postgres:15-alpine
+    container_name: postgresdb
+    restart: always
+    ports:
+      - 5432:5432
     environment:
-      - POSTGRES_USER=surveyuser
-      - POSTGRES_PASSWORD=surveypassword
+      - POSTGRES_USER=knowankit
+      - POSTGRES_PASSWORD=surveybuilder
       - POSTGRES_DB=surveybuilder
+    volumes:
+      - postgres_data:/var/lib/postgresql/data
+
+volumes:
+  postgres_data: {}
+
+# networks:
+#   default:
+#     name: surveybuildernetwork
