--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -2,6 +2,7 @@ version: '3'
 services:
   app:
     build: .
+    container_name: api
     ports:
       - 3001:3001
     environment:
@@ -12,6 +13,7 @@ services:
       - .:/app
     depends_on:
       - db
+
   db:
     image: postgres:15-alpine
     container_name: postgresdb
@@ -27,7 +29,3 @@ services:
 
 volumes:
   postgres_data: {}
-
-# networks:
-#   default:
-#     name: surveybuildernetwork
